--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -54,7 +54,7 @@
     text-decoration: none;
 }
 
-/* Each icon is created by inserting the corret character into the 
+/* Each icon is created by inserting the corret character into the
    content of the :before pseudo element. Like a boss. */
 .icon-ghost:before {
     content: "\e000";
@@ -277,8 +277,8 @@ kbd {
     font-weight: bold;
     background: #f4f4f4;
     border-radius: 4px;
-    box-shadow: 
-        0 1px 0 rgba(0, 0, 0, 0.2), 
+    box-shadow:
+        0 1px 0 rgba(0, 0, 0, 0.2),
         0 1px 0 0 #fff inset;
 }
 
@@ -350,7 +350,7 @@ button, input, select, textarea {
 .inner {
     position: relative;
     width: 80%;
-    max-width: 700px;
+    max-width: 960px;
     margin: 0 auto;
 }
 
@@ -379,9 +379,9 @@ button, input, select, textarea {
 }
 
 /* Yo-logo. Yolo-go. Upload one in ghost/settings/ */
-   
+
 #blog-logo {
-    width: 100px;
+    width: 200px;
     border-radius: 50%;
     overflow: hidden;
     display: block;
@@ -389,42 +389,29 @@ button, input, select, textarea {
     border: 5px solid #bf6165;
 
 }
-#blog-logo:before {  
-     width: 100px;
-     height: 100px;
-    border-radius: 50%;
-    overflow: hidden;
-    display: block;
-    margin: 0 auto;
-    content: "";  
-    display: block;  
-    position: absolute;  
-    top: 0;  
-    bottom: 0;  
-    left: 0;  
-    right: 0; 
-    background: none; 
-    -moz-transition: background .3s linear;  
-    -webkit-transition: background .3s linear;  
-    -o-transition: background .3s linear;  
-    transition: background .3s linear;  
-    border: 5px solid #bf6165;
 
-}
-
-#blog-logo:hover:before {
-    background: rgba(204,31,39, 0.5);  
-    
-}
 #blog-logo img {
     display: block;
-    max-height: 100px;
+    max-height: 200px;
     width: auto;
     line-height: 0;
     border-radius: 50%;
 
 }
 
+.about-me {
+    padding: 1px;
+    font-size: 0.85em;
+    border: 1px solid #424a5a;
+    background: #242937;
+    border-radius: 2px;
+    margin: 25px;
+}
+
+.about-me p {
+    margin: 15px 5px;
+    padding: 0;
+}
 
 #back {
     color: rgba(0,0,0,0.2);
@@ -453,8 +440,8 @@ button, input, select, textarea {
 /* Every post, on every page, gets this style on its <article> tag */
 .post {
     position: relative;
-    width:80%;
-    max-width: 700px;
+    width:90%;
+    max-width: 960px;
     margin: 4rem auto;
     padding-bottom: 4rem;
     border-bottom: #424650 1px solid;
@@ -657,7 +644,7 @@ button, input, select, textarea {
 .pagination {
     position: relative;
     width: 80%;
-    max-width: 700px;
+    max-width: 960px;
     margin: 4rem auto;
     font-family: "Courier New", Courier, monospace;
     font-size: 1.3rem;
@@ -830,9 +817,9 @@ button, input, select, textarea {
     }
 
     #site-head {
-        -webkit-box-sizing: border-box; 
+        -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
-        box-sizing: border-box; 
+        box-sizing: border-box;
         height: auto;
         min-height: 240px;
         padding: 15% 0;
@@ -861,7 +848,7 @@ button, input, select, textarea {
         padding: 40px 0;
     }
     .post-header #blog-logo:before {
-        margin: 40px auto        
+        margin: 40px auto
     }
 
     h1 {
@@ -896,11 +883,11 @@ button, input, select, textarea {
     #blog-logo {
         width: 80px;
     }
-    #blog-logo:before {  
+    #blog-logo:before {
         width: 80px;
         height: 80px;
     }
-    .inner, 
+    .inner,
     .pagination {
         width: auto;
         margin-left: 16px;
