--- a/page.hbs
+++ b/page.hbs
@@ -5,10 +5,10 @@
 
 <main class="content" role="main">
 
-    <article class="{{page_class}}">
+    <article class="{{post_class}}">
 
-        {{! Each page has the blog logo at the top, with a link back to the home page }}
-        <header class="page-header">
+        {{! Each post has the blog logo at the top, with a link back to the home page }}
+        <header class="post-header">
             <a id="blog-logo" href="{{@blog.url}}">
                 {{#if @blog.logo}}
                     <img src="{{@blog.logo}}" alt="Blog Logo" />
@@ -18,16 +18,19 @@
             </a>
         </header>
 
-        {{! Everything inside the #page tags pulls data from the page }}
-        {{#page}}
+        {{! Everything inside the #post tags pulls data from the post }}
+        {{#post}}
 
-        <h1 class="page-title">{{{title}}}</h1>
+        {{! Everything below outputs content of the the post which has been published }}
+        <span class="post-meta"><time datetime="{{date format="YYYY-MM-DD"}}">{{date format='DD MMM YYYY'}}</time> {{#if tags}}on {{tags separator=" | "}}{{/if}}</span>
 
-        <section class="page-content">
+        <h1 class="post-title">{{{title}}}</h1>
+
+        <section class="post-content">
             {{content}}
         </section>
 
-        {{/page}}
+        {{/post}}
 
     </article>
 
