--- a/default.hbs
+++ b/default.hbs
@@ -42,7 +42,7 @@
         <ul class="site-nav">
             <li><a href="/" title="Home">Home</a></li>
             <li><a href="/about" title="Page: ">About</a></li>
-            <li><a href="https://gitto.io/r/peterdemartini" title="Page: Resume on Gitto">Resume</a></li>
+            <li><a href="http://resume.peterdemartini.com" title="Page: Resume on Gitto.io">Resume</a></li>
             <li><a href="/contact" title="Page: Contact">Contact</a></li>
         </ul>
     </header>
